--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,71 @@
-Django==2.0.4
-pandas==0.24.2
-dill==0.2.9
-djangorestframework==3.9.2
-jupyterlab==0.35.4
-requests==2.21.0
-sklearn==0.0
+appnope=0.1.0=pypi_0
+attrs=19.1.0=pypi_0
+backcall=0.1.0=pypi_0
+bleach=3.1.0=pypi_0
+ca-certificates=2019.1.23=0
+certifi=2019.3.9=py37_0
+chardet=3.0.4=pypi_0
+decorator=4.4.0=pypi_0
+defusedxml=0.6.0=pypi_0
+dill=0.2.9=py37_0
+django=2.0.4=pypi_0
+djangorestframework=3.9.2=pypi_0
+entrypoints=0.3=pypi_0
+idna=2.8=pypi_0
+ipykernel=5.1.0=pypi_0
+ipython=7.4.0=pypi_0
+ipython-genutils=0.2.0=pypi_0
+jedi=0.13.3=pypi_0
+jinja2=2.10.1=pypi_0
+jsonschema=3.0.1=pypi_0
+jupyter-client=5.2.4=pypi_0
+jupyter-core=4.4.0=pypi_0
+jupyterlab=0.35.4=pypi_0
+jupyterlab-server=0.2.0=pypi_0
+libcxx=4.0.1=hcfea43d_1
+libcxxabi=4.0.1=hcfea43d_1
+libedit=3.1.20181209=hb402a30_0
+libffi=3.2.1=h475c297_4
+markupsafe=1.1.1=pypi_0
+mistune=0.8.4=pypi_0
+nbconvert=5.4.1=pypi_0
+nbformat=4.4.0=pypi_0
+ncurses=6.1=h0a44026_1
+notebook=5.7.8=pypi_0
+numpy=1.16.2=pypi_0
+openssl=1.1.1b=h1de35cc_1
+pandas=0.24.2=pypi_0
+pandocfilters=1.4.2=pypi_0
+parso=0.4.0=pypi_0
+pexpect=4.7.0=pypi_0
+pickleshare=0.7.5=pypi_0
+pip=19.0.3=py37_0
+prometheus-client=0.6.0=pypi_0
+prompt-toolkit=2.0.9=pypi_0
+ptyprocess=0.6.0=pypi_0
+pygments=2.3.1=pypi_0
+pyrsistent=0.14.11=pypi_0
+python=3.7.3=h359304d_0
+python-dateutil=2.8.0=pypi_0
+pytz=2019.1=pypi_0
+pyzmq=18.0.1=pypi_0
+readline=7.0=h1de35cc_5
+requests=2.21.0=pypi_0
+scikit-learn=0.19.1=pypi_0
+scipy=1.2.1=pypi_0
+send2trash=1.5.0=pypi_0
+setuptools=41.0.0=py37_0
+six=1.12.0=pypi_0
+sklearn=0.0=pypi_0
+sqlite=3.27.2=ha441bb4_0
+terminado=0.8.2=pypi_0
+testpath=0.4.2=pypi_0
+tk=8.6.8=ha441bb4_0
+tornado=6.0.2=pypi_0
+traitlets=4.3.2=pypi_0
+urllib3=1.24.2=pypi_0
+wcwidth=0.1.7=pypi_0
+webencodings=0.5.1=pypi_0
+wheel=0.33.1=py37_0
+xz=5.2.4=h1de35cc_4
+zlib=1.2.11=h1de35cc_3
